# Vector-Prism

./: README.md  animation_generator.py  animation_planner.py  animation_state.py  main.py  pyproject.toml  requirements.txt  svg_decomposition.py
prompts/: __init__.py  llm_templates.py  vlm_strategies.py
script/: export_frames.sh  test.sh
utils/: setup.py
