[project]
name = "vector-prism"
version = "0.1.0"
description = "LLM/VLM-driven SVG animation pipeline from the Vector Prism paper"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core
    "torch",
    "transformers",
    
    # Image/SVG processing
    "Pillow",
    "cairosvg",
    "lxml",
    "beautifulsoup4",
    
    # LLM providers
    "langchain",
    "langchain-anthropic",
    "langchain-openai",
    
    # Data
    "jsonlines",
    
    # Export (optional but included for convenience)
    "selenium",
    "ffmpeg-python",
    "PyMuPDF",
]

[project.optional-dependencies]
eval = [
    "ftfy",
    "einops",
    "opencv-python",
    "timm",
    "icecream",
]

[project.scripts]
vector-prism = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = [
    "main.py",
    "animation_generator.py",
    "animation_planner.py",
    "animation_state.py",
    "svg_composition.py",
    "svg_decomposition.py",
    "utils",
    "prompts",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "ruff",
]
